<resources>
    <string name="app_name">LiteCalculator</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="default_text">0</string>
    <string name="reset">C</string>
    <string name="percent">%</string>
    <string name="sqrt">√</string>
    <string name="division">÷</string>
    <string name="multi">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dot">,</string>
    <string name="back">Del</string>
    <string name="result">=</string>
    <string name="logo_text">LiteCalculator</string>
    <string name="theme_1">Light Theme</string>
    <string name="theme_2">Dark Theme</string>
</resources>