<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/screen_text"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:background="@color/screen"
        android:gravity="end"
        android:padding="10dp"
        android:text="@string/default_text"
        android:textColor="@color/black"
        android:textSize="70sp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="end"
        android:text="@string/logo_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="5">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_c"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_percent"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sqrt"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/sqrt"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_division"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_1"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_2"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_3"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_multi"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/multi"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_4"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_5"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_5"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_6"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_6"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_7"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_7"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_8"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_8"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_9"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_9"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_num_0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/num_0"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_del"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_result"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:height="60dp"
            android:background="@drawable/my_button_bg"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </GridLayout>


</LinearLayout>